plugins {
    alias(libs.plugins.shadow)
    alias(libs.plugins.micronaut.application)
}

micronaut {
    version = libs.versions.micronaut.platform.get()
    runtime("none")
    processing {
        incremental true
        annotations 'com.enonic.xp.migrator.*'
    }
}

graalvmNative {
    toolchainDetection = false
    binaries {
        main {
            imageName = 'migrator'
            buildArgs.addAll(
                '--initialize-at-build-time=ch.qos.logback',
                '--initialize-at-build-time=org.slf4j',
                '-H:+ReportExceptionStackTraces'
            )
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    annotationProcessor libs.picocli.codegen
    annotationProcessor libs.micronaut.inject.java

    implementation libs.micronaut.picocli
    implementation libs.micronaut.inject
    implementation libs.guava
    implementation libs.jackson.core
    implementation libs.jackson.annotations
    implementation libs.jackson.databind
    implementation libs.jackson.dataformat.yaml
    implementation libs.slf4j.api
    implementation libs.logback.classic

    testImplementation libs.micronaut.test.junit5
    testImplementation libs.junit.jupiter

    testRuntimeOnly libs.junit.platform.launcher
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'com.enonic.xp.migrator.Main'
}

shadowJar {
    archiveBaseName.set( "migrator" )
    archiveVersion.set( "" )
    archiveClassifier.set( "" )
}

test {
    useJUnitPlatform()
}
